fix: dropdown-menu is being obscured cause of overflow style

--- a/assets/sass/_common/_animation.scss
+++ b/assets/sass/_common/_animation.scss
@@ -5,7 +5,6 @@
   backface-visibility: hidden;
   box-shadow: 0 0 1px transparent;
   position: relative;
-  overflow: hidden;
 
   &:before {
     content: '';
